--- a/dating/src/main/resources/static/css/style.css
+++ b/dating/src/main/resources/static/css/style.css
@@ -60,14 +60,14 @@ body{
 	width: 190px;
 	border:solid 3px white;
 	text-align: center;
-	color:white;
+	color:black;
 
 }
 li{
 	
 }
 .menubtn:visited{
-	color:white;
+	color:black;
 }
 .carrousel{
 	
